<resources>
    <string name="app_name">TodoList</string>

    <string name="createBtn">Create New Task</string>
    <string name="action_settings">Settings</string>
    <string name="titleTxtBox">Title Text Box</string>
    <string name="dateTxtBox">Date Text Box</string>
    <string name="timeTxtBox">Time Text Box</string>
    <string name="title_activity_task_creation">TaskCreation</string>

    <!-- CREATION TASK PART -->
    <string name="creationPageTitle">Task Creation Page</string>
    <string name="creationTitleTxtBox">Task Title</string>
    <string name="creationDateTxtBox">Task Date</string>
    <string name="creationTimeTxtBox">Task Time</string>
    <string name="saveBtn">Save Task</string>

</resources>
