<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleTxtBox"
        android:id="@+id/titleTxtBox"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dateTxtBox"
        android:id="@+id/dateTxtBox"
        android:layout_below="@+id/titleTxtBox"
        android:layout_alignLeft="@+id/titleTxtBox"
        android:layout_alignStart="@+id/titleTxtBox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/timeTxtBox"
        android:id="@+id/timeTxtBox"
        android:layout_below="@+id/titleTxtBox"
        android:layout_toRightOf="@+id/dateTxtBox"
        android:layout_toEndOf="@+id/dateTxtBox"
        android:layout_marginLeft="15dp" />
</RelativeLayout>